style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing:border-box;
    max-width:100%;
    color: white;

}
html{
    font-size:62.5%;
}
body{
    font-size:1.6rem;
    Font-Family: 'Cabin', Sans-Serif;
    line-height:1.5;
    background-color: #222629;
}
h1{
    Font-Family: 'Roboto Condensed', Sans-Serif;
    font-size:5rem;
    text-transform: uppercase;
    font-weight: bold; 
}

.main {
    padding: 5%;
    width:70%;
    height:60vh;
    background-image: url("images/header-image.jpg");
    background-repeat: no-repeat;
    background-size:cover;
    background-position: top;

}
.main h1 {
    width: 100%;
    display: flex;
    align-content: center;
}

nav {
    display: flex;
    margin-left: 2%;
    padding: 1%;
}
.name {
    width: 15%;
    text-transform: uppercase;
    font-size: 1.8rem;
    font-weight: bold;
    align-items: center;
}
.right-nav {
    width: 50%;
    display: flex;
    align-items: center;
    margin-left: 77%; /* moves the navbar to the right of the screen */
}
.right-nav a {
    text-decoration: none;
    color:white

}
.box {
   /* border: 1px solid black;  */
    padding: 3px;
    padding-left: 5%;
    padding-right: 5%;
}
.box:hover { /* nv bar hover properties */
    background-color: #86C232;
    color: white;
}
.projects {
    display: flex;
    flex-wrap: wrap;
    margin-top: 1%;
    justify-content: space-evenly;
}
.item{
width: 26%;
height: auto;
margin: 2%;
}
.item p { /* This centers text under the image */
    text-align: center;
}
footer button {
    background-color:#86C232 ;
    border-radius: 50px;
    padding: 10% 20% 10% 20%; 
    text-transform: uppercase; /* makes text in footer uppercase */
    font-weight: bold;
    white-space: nowrap; /* puts text on one line- stops it from wrapping to the next */
    display: flex;
    justify-content: center;
    text-transform: uppercase;
    font-weight: bold;
    border-style: solid; /* makes the button solid green removes the annoying black edges */
}
footer a {
    text-decoration: none; /* removes link from anchor tag*/
}
footer {
    background-color:#6B6E70;
    display: flex;
    text-align: center;
    justify-content: center;
    padding: 1.5%;

}

.top {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}
.top h1 {
    display: flex;
    justify-content: center;
    align-self: center;
    margin-top: 15%; /* adds space at the top of the element*/ 
}
.top button {
    background-color: #61892F;
    border-radius: 50px;
    padding: 1% 2% 1% 2%;
    text-transform: uppercase;
    font-weight: bold;

}
.top a {
    text-decoration: none;
    display: flex;
    justify-content: center;
    align-self: center;
}
button:hover {
    cursor: pointer; /* changes the cursor when hovering over the button*/
}

